--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ DEBUG=TRUE
 
 # Front-End Variables
 BASENAME=/
-#BACKEND_URL=
+BACKEND_URL=https://silver-chainsaw-7vv9jgpx9446fp7wp-3001.app.github.dev
